# starship-profiles

./: .gitignore  Cargo.toml  README.md  example-config.toml  flake.nix
.github/workflows/: ci.yaml
nix/: devshell.nix
nix/lib/: default.nix
src/: main.rs
